--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -9,30 +9,46 @@
 <body>
 
   <h1>Coding Form!</h1>
-  <label for="email">Email</label>
-  <div><input type="email" name="name" id="name"></div>
   <form action="">
-    <div>Why is coding cool?</div>
-    <select name="reasons" id="reasons">
-      <option value="Select">Select an Option</option>
-      <option value="interesting">Because it's interesting</option>
-      <option value="fun">Because it's fun</option>
-      <option value="powerful">Because it's powerful</option>
-    </select>
+    <label for="email">Email</label>
+    <div>
+      <input type="email" name="name" id="email">
+    </div>
+
+
+    <label for="reasons"></label>Why is coding cool?
+    <div>
+      <select name="reasons" id="reasons">
+        <option value="Select">Select an Option</option>
+        <option value="interesting">Because it's interesting</option>
+        <option value="fun">Because it's fun</option>
+        <option value="powerful">Because it's powerful</option>
+      </select>
+    </div>
 
 
     <p>Favorite Language (choose one)</p>
-    <input type="radio" name="language" value="HTML">HTML
-    <input type="radio" name="language" value="CSS">CSS
-    <input type="radio" name="language" value="JS">JavaScript
+    <label for="html">
+      <input type="radio" name="language" value="HTML"
+      >HTML
+    </label>
+    <label for="css">
+      <input type="radio" name="language" value="CSS"
+      >CSS
+    </label>
+    <label for="js">
+      <input type="radio" name="language" value="JS"
+      >JavaScript
+    </label>
 
-
+    <label for="signmeup"></label>
     <p>Would you like to sign up for more information?</p>
     <input type="checkbox" name="signup" value="signmeup" /> Sign me up!
 
 
-    <div>Comments</div>
+
     <label for="comments"></label>
+    <div>Comments</div>
     <textarea name="comments" id="comments" cols="50" rows="10"></textarea>
 
     <div class="submitform">
