Edited label codes.

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -16,7 +16,7 @@
     </div>
 
 
-    <label for="reasons"></label>Why is coding cool?
+    <label for="reasons">Why is coding cool?</label>
     <div>
       <select name="reasons" id="reasons">
         <option value="Select">Select an Option</option>
@@ -45,11 +45,11 @@
     <p>Would you like to sign up for more information?</p>
     <input type="checkbox" name="signup" value="signmeup" /> Sign me up!
 
-
-
-    <label for="comments"></label>
-    <div>Comments</div>
+    <div>
+      <label for="comments">Comments</label>
+    </div>
     <textarea name="comments" id="comments" cols="50" rows="10"></textarea>
+
 
     <div class="submitform">
       <input type="submit" value="Submit">
