--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -41,9 +41,12 @@
       >JavaScript
     </label>
 
-    <label for="signmeup"></label>
     <p>Would you like to sign up for more information?</p>
-    <input type="checkbox" name="signup" value="signmeup" /> Sign me up!
+    <label for="signmeup">
+      <input type="checkbox" name="signup" value="signmeup"
+    >Sign me up!
+    </label>
+
 
     <div>
       <label for="comments">Comments</label>
