--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -21,42 +21,66 @@
         </p>
       </div>
     </div>
-
     <div class="row">
-      <div class="column-one-fourth-img">
-        <img src="images/software.svg" alt="software">
-        <img src="images/circumstance.svg" alt="circumstance">
+      <div class="column-one-half">
+        <div class="row">
+          <div class="column-one-third">
+            <img src="images/software.svg" alt="software">
+          </div>
+          <div class="column-two-third">
+            <h3>INTUITIVE, <br> SMART SOFTWARE</h3>
+            <p>
+              We build products that transform how healthcare facilities run across
+              Africa - making them radically more efficient operationally and financially,
+              a complete turnaround.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="column-one-fourth">
-        <h3>INTUITIVE, <br> SMART SOFTWARE</h3>
-        <p>We build products that transform how healthcare facilities run across
-          Africa - making them radically more efficient operationally and financially,
-          a complete turnaround.
-        </p>
-        <h3>FOR ANY CIRCUMSTANCE</h3>
-        <p>Our intuitive system is built around the peculiarities of your facility:
-          we support offline deployments, sync to the cloud and run on any device 24/7.
-        </p>
+      <div class="column-one-half">
+        <div class="row">
+          <div class="column-one-third">
+            <img src="images/practice.svg" alt="practice">
+          </div>
+          <div class="column-two-third">
+            <h3>PRACTICE MEDICINE, NOT <br> ADMINISTRATION</h3>
+            <p>Our all-in-one electronic health records (EHR), hospital management (HMIS)
+              &amp; billing system helps streamline your facility, reduce waste and
+              improve quality of care.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="column-one-fourth-img">
-        <img src="images/practice.svg" alt="practice">
-        <img src="images/data.svg" alt="data">
+      <div class="column-one-half">
+        <div class="row">
+          <div class="column-one-third">
+            <img src="images/circumstance.svg" alt="circumstance">
+          </div>
+          <div class="column-two-third">
+            <h3>FOR ANY CIRCUMSTANCE</h3>
+            <p>Our intuitive system is built around the peculiarities of your facility:
+              we support offline deployments, sync to the cloud and run on any device 24/7.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="column-one-fourth">
-        <h3>PRACTICE MEDICINE, NOT <br> ADMINISTRATION</h3>
-        <p>Our all-in-one electronic health records (EHR), hospital management (HMIS)
-          &amp; billing system helps streamline your facility, reduce waste and
-          improve quality of care.
-        </p>
-        <h3>DATA THAT TRANSFORMS</h3>
-        <p>We understand your facility better than you do: we provide visually-appealing
-          real-time analytics, reports and trends at your finger tips.
-        </p>
+      <div class="column-one-half">
+        <div class="row">
+          <div class="column-one-third">
+            <img src="images/data.svg" alt="data">
+          </div>
+          <div class="column-two-third">
+            <h3>DATA THAT TRANSFORMS</h3>
+            <p>We understand your facility better than you do: we provide visually-appealing
+              real-time analytics, reports and trends at your finger tips.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div>
-    <button>LEARN MORE</button>
+    <div>
+      <button>LEARN MORE</button>
+    </div>
   </div>
 
 </body>
