changed class names

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="one">
-    <div class="container-one">
+  <section class="header">
+    <div class="container-header">
       <div class="row">
         <div class="column-one-sixth">
           <img src="images/logo-blue.svg" alt="blue-logo">
@@ -29,7 +29,7 @@
           <p>Blog</p>
         </div>
         <div class="column-six-sixth">
-          <button class="button-one">
+          <button class="header-button">
             Contact Us
           </button>
         </div>
@@ -38,11 +38,11 @@
     <hr>
   </section>
 
-  <section class="two">
+  <section class="first-body">
     <div class="hero-image">
       <div class="hero-text">
-        <h1 class="header-one">The EMR Reimagined for <br> Primary Care</h1>
-        <p class="description-one">Can't remember the last time you talked with a patient without focusing <br>
+        <h1 class="first-body-header">The EMR Reimagined for <br> Primary Care</h1>
+        <p class="first-body-description">Can't remember the last time you talked with a patient without focusing <br>
           on the EMR? Canvas lets you rediscover the joy in the work you do. Capture <br>
           meaningful data, identify gaps in care, and move seamlessly between <br>
           tasks within the platform. You stay present with your patients while your <br>
@@ -50,18 +50,18 @@
           designed for primary care providers with the help of your primary care <br>
           providers.
         </p>
-        <button class="button-two">
+        <button class="first-body-button">
           Get Started
         </button>
       </div>
     </div>
   </section>
 
-  <section class="three">
-    <h2 class="three-header">Clinicians Prefer Canvas</h2>
+  <section class="clinicians-location">
+    <h2 class="clinicians-header">Clinicians Prefer Canvas</h2>
     <p class="bio">Physician-owned primary care practices across the country have <br>
       already made Canvas the fabric of their care.</p>
-    <div class="container-three">
+    <div class="container-clinicians">
       <div class="row">
         <div class="column-one-half">
           <p class="three-text">Cascade Family Practice, Portland OR</p>
@@ -77,15 +77,15 @@
     </div>
   </section>
 
-  <section class="four">
-    <div class="container-four">
+  <section class="more-information">
+    <div class="container-more-information">
       <div class="row">
         <div class="column-one-half">
           <h2 class="learn">Ready to learn more?</h2>
           <p class="meeting">Schedule a private meeting now</p>
         </div>
         <div class="column-one-half">
-          <button class="button-four">
+          <button class="button-more-information">
             Get Started
           </button>
         </div>
@@ -93,22 +93,22 @@
     </div>
   </section>
 
-  <section class="five">
-    <div class="container-five">
+  <section class="footer">
+    <div class="container-footer">
       <div class="row">
-        <div class="column-one-third-first">
+        <div class="column-one-third-logo">
           <img src="images/logo-white.png" alt="white-logo">
           <p class="address">2307 Irving Street, Suite 228 <br> San Francisco CA 94122 <br>
             (800) 370-1416 <br>
             info@canvasmedical.com
           </p>
         </div>
-        <div class="column-one-third-second">
+        <div class="column-one-third-company">
           <p>COMPANY</p>
           <p>About Us</p>
           <p>Blog</p>
         </div>
-        <div class="column-one-third-third">
+        <div class="column-one-third-product">
           <p>PRODUCT</p>
           <p>Product</p>
           <p>Implementation</p>
@@ -119,13 +119,13 @@
     </div>
   </section>
 
-  <section class="six">
-    <div class="container-six">
+  <section class="page-bottom">
+    <div class="container-page-bottom">
       <div class="row">
-        <div class="column-six-one">
+        <div class="column-bottom-privacy">
           <p>Privacy &amp; Terms</p>
         </div>
-        <div class="column-six-two">
+        <div class="column-bottom-contact">
           <p>Contact Us</p>
         </div>
       </div>
