still in progress

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -13,26 +13,18 @@
   <section class="header">
     <div class="container-header">
       <div class="row">
-        <div class="column-one-sixth">
+        <div class="header-logo">
           <img src="images/logo-blue.svg" alt="blue-logo">
         </div>
-        <div class="column-two-sixth">
-          <p>Product</p>
+        <div class="pages">
+          <span class="labels">Product</span>
+          <span class="labels">Implementation</span>
+          <span class="labels">About Us</span>
+          <span class="labels">Blog</span>
         </div>
-        <div class="column-three-sixth">
-          <p>Implementation</p>
-        </div>
-        <div class="column-four-sixth">
-          <p>About Us</p>
-        </div>
-        <div class="column-five-sixth">
-          <p>Blog</p>
-        </div>
-        <div class="column-six-sixth">
-          <button class="header-button">
-            Contact Us
-          </button>
-        </div>
+        <button class="header-button">
+          Contact Us
+        </button>
       </div>
     </div>
     <hr>
@@ -96,19 +88,19 @@
   <section class="footer">
     <div class="container-footer">
       <div class="row">
-        <div class="column-one-third-logo">
+        <div class="footer-logo">
           <img src="images/logo-white.png" alt="white-logo">
           <p class="address">2307 Irving Street, Suite 228 <br> San Francisco CA 94122 <br>
             (800) 370-1416 <br>
             info@canvasmedical.com
           </p>
         </div>
-        <div class="column-one-third-company">
+        <div class="footer-company">
           <p>COMPANY</p>
           <p>About Us</p>
           <p>Blog</p>
         </div>
-        <div class="column-one-third-product">
+        <div class="footer-product">
           <p>PRODUCT</p>
           <p>Product</p>
           <p>Implementation</p>
@@ -122,10 +114,10 @@
   <section class="page-bottom">
     <div class="container-page-bottom">
       <div class="row">
-        <div class="column-bottom-privacy">
+        <div class="page-bottom-privacy">
           <p>Privacy &amp; Terms</p>
         </div>
-        <div class="column-bottom-contact">
+        <div class="page-bottom-contact">
           <p>Contact Us</p>
         </div>
       </div>
