made changes to css file

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -53,7 +53,7 @@
     <h2 class="clinicians-header">Clinicians Prefer Canvas</h2>
     <p class="bio">Physician-owned primary care practices across the country have <br>
       already made Canvas the fabric of their care.</p>
-    <div class="container-clinicians">
+    <div class="clinicians">
       <div class="row">
         <div class="column-one-half">
           <p class="three-text">Cascade Family Practice, Portland OR</p>
@@ -70,7 +70,7 @@
   </section>
 
   <section class="more-information">
-    <div class="container-more-information">
+    <div class="learn-more">
       <div class="row">
         <div class="column-one-half">
           <h2 class="learn">Ready to learn more?</h2>
