--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -13,31 +13,31 @@
     <div class="row">
       <div class="column-one-fifth">
         <img src="images/dress1.jpeg" alt="dressone">
-        <p class="brand">Free People | <span class="size">Size 6</span></p>
+        <p class="brand">Free People <span class="size">| Size 6</span></p>
         <p><span class="price">$35</span><del class="retail">  $125 retail</del></p>
       </div>
 
       <div class="column-one-fifth">
         <img src="images/ysl-bag.jpeg" alt="ysl">
-        <p class="brand">Yves Saint Laurent | <span class="size">One-Size</span></p>
+        <p class="brand">Yves Saint Laurent <span class="size">| One-Size</span></p>
         <p><span class="price">$200</span><del class="retail">  $1600 retail</del></p>
       </div>
 
       <div class="column-one-fifth">
         <img src="images/key.jpeg" alt="key">
-        <p class="brand">Tiffany | <span class="size">One-Size</span></p>
+        <p class="brand">Tiffany <span class="size">| One-Size</span></p>
         <p><span class="price">$476</span><del class="retail">  $2000 retail</del></p>
 
       </div>
       <div class="column-one-fifth">
         <img src="images/lv-bag.jpg" alt="louisvuitton">
-        <p class="brand">Louis Vuitton | <span class="size">One-Size</span></p>
+        <p class="brand">Louis Vuitton <span class="size">| One-Size</span></p>
         <p><span class="price">$95</span><del class="retail">  $1200 retail</del></p>
       </div>
 
       <div class="column-one-fifth">
         <img src="images/dress2.jpeg" alt="dresstwo">
-        <p class="brand">Reformation | <span class="size">Size 4</span></p>
+        <p class="brand">Reformation <span class="size">| Size 4</span></p>
         <p><span class="price">$20</span><del class="retail">  $198 retail</del></p>
       </div>
 
