--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="header">
-    <div class="container-header">
+  <div class="container">
+    <div class="header-box">
       <div class="row">
         <div class="header-logo">
           <img src="images/logo-blue.svg" alt="blue-logo">
         </div>
-        <div class="pages">
+        <div class="column-pages">
           <span class="labels">Product</span>
           <span class="labels">Implementation</span>
           <span class="labels">About Us</span>
@@ -28,9 +28,9 @@
       </div>
     </div>
     <hr>
-  </section>
+  </div>
 
-  <section class="first-body">
+  <div class="first-body">
     <div class="hero-image">
       <div class="hero-text">
         <h1 class="first-body-header">The EMR Reimagined for <br> Primary Care</h1>
@@ -47,9 +47,9 @@
         </button>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="clinicians-location">
+  <div class="clinicians-location">
     <h2 class="clinicians-header">Clinicians Prefer Canvas</h2>
     <p class="bio">Physician-owned primary care practices across the country have <br>
       already made Canvas the fabric of their care.</p>
@@ -67,9 +67,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="more-information">
+  <div class="more-information">
     <div class="learn-more">
       <div class="row">
         <div class="column-one-half">
@@ -83,9 +83,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="footer">
+  <div class="footer">
     <div class="container-footer">
       <div class="row">
         <div class="footer-logo">
@@ -95,23 +95,27 @@
             info@canvasmedical.com
           </p>
         </div>
-        <div class="footer-company">
-          <p>COMPANY</p>
-          <p>About Us</p>
-          <p>Blog</p>
+        <div class="column-one-third">
+          <div class="footer-company">
+            <p>COMPANY</p>
+            <p>About Us</p>
+            <p>Blog</p>
+          </div>
         </div>
-        <div class="footer-product">
-          <p>PRODUCT</p>
-          <p>Product</p>
-          <p>Implementation</p>
-          <p>For Health Plans</p>
-          <p>Security</p>
+        <div class="column-one-third">
+          <div class="footer-product">
+            <p>PRODUCT</p>
+            <p>Product</p>
+            <p>Implementation</p>
+            <p>For Health Plans</p>
+            <p>Security</p>
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="page-bottom">
+  <div class="page-bottom">
     <div class="container-page-bottom">
       <div class="row">
         <div class="page-bottom-privacy">
@@ -122,7 +126,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
 </body>
 </html>
