javascript-modal - Michael Suh

--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -8,11 +8,13 @@
   <title>JavaScript Modal</title>
 </head>
 <body>
-  <button class="open-button">Open Modal</button>
-  <div class="survey-box hide">
-    <div class="survey">
-      <h2>Would you like to take a survey?</h2>
-      <button class="survey-button">NO</button>
+  <div class="container">
+    <button class="open-button">Open Modal</button>
+    <div class="survey-box hide">
+      <div class="survey">
+        <h2>Would you like to take a survey?</h2>
+        <button class="survey-button">NO</button>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
