--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -16,7 +16,7 @@
         <div class="header-logo">
           <img src="images/logo-blue.svg" alt="blue-logo">
         </div>
-        <div class="column-pages">
+        <div class="column-pages top-label">
           <span class="labels">Product</span>
           <span class="labels">Implementation</span>
           <span class="labels">About Us</span>
